@@ -3,6 +3,8 @@ fwknop-2.5.2 (//2013):
       or fwknopd command to be sent through gdb with the same command line
       args as the test suite used.  This is for convenience to rapidly allow
       gdb to be launched when investigating fwknop/fwknopd problems.
+    - [client] (Franck Joncourt) Added --stanza-list argument to show the
+      stanza names from ~/.fwknoprc.
 
 fwknop-2.5.1 (07/25/2013):
     - [client] Bug fix to reset terminal setting to orignal values after
